chore: modify logic
