# docs/swagger.json
@@ -1,28 +1,38 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server server.",
-        "title": "Gin Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {}
     },
     "paths": {
-        "/generate-report": {
+        "/config": {
             "get": {
-                "description": "\u003cAPI Description\u003e",
+                "description": "Get app config",
+                "consumes": [
+                    "*/*"
+                ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "\u003csummary\u003e",
+                "tags": [
+                    "General"
+                ],
+                "summary": "Get App Config",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/generate-report": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Generate report from sent results",
                 "parameters": [
                     {
                         "type": "string",
@@ -66,9 +76,9 @@
                 }
             }
         },
-        "/ping": {
+        "/projects": {
             "get": {
-                "description": "get the status of server.",
+                "description": "Get All projects",
                 "consumes": [
                     "*/*"
                 ],
@@ -76,9 +86,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "root"
+                    "Projects"
                 ],
-                "summary": "Show the status of server.",
+                "summary": "Get All projects",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -114,11 +124,9 @@
                         "description": "OK"
                     }
                 }
-            }
-        },
-        "/projects/{project_id}/reports/{path}": {
-            "get": {
-                "description": "Get Project By ID",
+            },
+            "post": {
+                "description": "Create Project",
                 "consumes": [
                     "*/*"
                 ],
@@ -128,7 +136,62 @@
                 "tags": [
                     "Projects"
                 ],
-                "summary": "Get Project By ID",
+                "summary": "Create Project",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "default",
+                        "description": "default",
+                        "name": "project_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete Project",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Delete Project",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "default",
+                        "description": "default",
+                        "name": "project_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/projects/{project_id}/reports/{path}": {
+            "get": {
+                "description": "Get Path in a project directory",
+                "consumes": [
+                    "*/*"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Get Path in a project directory",
                 "parameters": [
                     {
                         "type": "string",
@@ -157,8 +220,14 @@
         "/send-results": {
             "post": {
                 "description": "Send allure result files to server",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Reports"
                 ],
                 "summary": "Send results",
                 "parameters": [
